--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -390,14 +390,22 @@ grid-area:cinco ;
     justify-content: center;
     align-items: center;
 .producto{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 75%;
     border-radius: 2em;
-    height: 300px;
+    height: 310px;
     background-color: $colorCrema;
     margin-bottom: 10px;
     img{
-        width:50%;
-
+        width: 75%;
+        height: 75%;
+    }
+    p{
+        height: fit-content;
+        margin:0px 5px ;
+        @include parrafos(18px, 18px,center )
     }
 }
 }
@@ -634,7 +642,7 @@ header{
   #grilla1{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 0.4fr 1.2fr 10fr 0.3fr 6fr 0.8fr 2fr 1.2fr;
+    grid-template-rows: min-content;
     grid-template-areas: "nav nav"
                         "aceitunas aceitunas"
                         "clasico clasico"
@@ -748,11 +756,23 @@ width: 50%;
     justify-content: center;
     align-items: center;
 .producto{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     width: 75%;
     border-radius: 2em;
     height: 300px;
     background-color: $colorCrema;
     margin-bottom: 10px;
+    img{
+        width: 75%;
+        height: 75%;
+    }
+    p{
+        height: fit-content;
+        margin:0px 5px ;
+        @include parrafos(18px, 18px,center );
+    }
 }
 }
 }
@@ -904,6 +924,7 @@ html{
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: min-content;
     grid-template-areas: "nav nav"
                         "aceitunas aceitunas"
                         "clasico clasico"
@@ -1047,6 +1068,8 @@ html{
     justify-content: center;
     align-items: center;
 .producto{
+    display: flex;
+    flex-direction: row;
     width: 75%;
     border-radius: 2em;
     height: 320px;
@@ -1055,15 +1078,14 @@ html{
     justify-content: center;
     align-items: center;
  
-   img{
-       width :50%
-   }
+
+}   
+
    p{
        height: fit-content;
        margin:0px 5px ;
-       @include parrafos(18px, 18px,center )
+       @include parrafos(20px, 20px,center )
    }
-} 
 
 }
 
