--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1078,7 +1078,10 @@ html{
     justify-content: center;
     align-items: center;
  
-
+    img{
+        width: 300px;
+        height: 300px;
+    }
 }   
 
    p{
