--- a/css/estilo.css
+++ b/css/estilo.css
@@ -898,8 +898,8 @@ header {
       justify-content: center;
       align-items: center; }
       #quesito .producto img {
-        width: 300px;
-        height: 300px; }
+        width: 100%;
+        height: 100%; }
     #quesito p {
       height: fit-content;
       margin: 0px 5px;
