--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1079,8 +1079,8 @@ html{
     align-items: center;
  
     img{
-        width: 300px;
-        height: 300px;
+        width: 100%;
+        height: 100%;
     }
 }   
 
